--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <!-- ===== VIDEO BACKGROUND ===== -->
   <video autoplay muted loop id="bgVideo">
-    <source src="video.mp4" type="video/mp4">
+    <source src="output.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
 
