--- a/index.html
+++ b/index.html
@@ -5,24 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bad Habit Breaker</title>
 
-  <!-- Optional CSS Reset & Base Styles -->
   <style>
-    /* ======== RESET (Optional) ======== */
+    /* ======== RESET ======== */
     *, *::before, *::after {
       margin: 0; 
       padding: 0; 
       box-sizing: border-box;
-    }
-
-    /* ======== VIDEO BACKGROUND STYLES ======== */
-    #bgVideo {
-      position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-      z-index: -1;
     }
 
     /* ======== BASE STYLES ======== */
@@ -30,12 +18,12 @@
       font-family: Arial, sans-serif;
       line-height: 1.4;
       transition: background-color 0.3s, color 0.3s;
-      background-color: #f4f4f4;
-      color: #333;
+      background-color: #2E003E; /* black violet background */
+      color: #f4f4f4;
       margin: 0;
       padding: 0;
     }
-    
+
     h1, h2, h3 {
       margin-bottom: 0.5rem;
     }
@@ -57,14 +45,15 @@
       border-radius: 4px;
     }
 
+    /* Container Styles for Improved Contrast */
     .container {
       width: 90%;
       max-width: 600px;
       margin: 1rem auto;
       padding: 1rem;
-      /* Optional: Add a background or shadow for better text contrast */
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255, 255, 255, 0.95);
       border-radius: 4px;
+      color: #333; /* Dark text for readability on light background */
     }
 
     .flex {
@@ -73,16 +62,20 @@
       justify-content: space-between;
     }
 
-    /* Theme toggling (light/dark) */
+    /* Theme Toggling: Light Mode and Dark Mode */
     body.light-mode {
-      background-color: #f4f4f4;
-      color: #333;
+      background-color: #2E003E;
+      color: #f4f4f4;
     }
     body.dark-mode {
       background-color: #222;
       color: #f4f4f4;
     }
-
+    body.dark-mode .container {
+      background: #333;
+      color: #f4f4f4;
+    }
+    
     .toggle-theme {
       margin: 0.5rem auto;
       display: inline-block;
@@ -102,6 +95,11 @@
       border-radius: 4px;
       display: flex;
       flex-direction: column;
+      color: #333;
+    }
+    body.dark-mode .habit-item {
+      background: #444;
+      color: #f4f4f4;
     }
 
     .habit-name {
@@ -118,12 +116,17 @@
       margin-right: 0.5rem;
     }
 
-    /* Daily Check-in area */
+    /* Check-In Section */
     .checkin-section {
       margin-top: 1rem;
       background: #e9e9e9;
       padding: 1rem;
       border-radius: 4px;
+      color: #333;
+    }
+    body.dark-mode .checkin-section {
+      background: #555;
+      color: #f4f4f4;
     }
 
     /* Completion Celebration Screen */
@@ -156,7 +159,7 @@
       margin: 1rem 0;
     }
 
-    /* Simple Chart (Progress bars or tiny placeholders) */
+    /* Chart Section */
     .chart-section {
       margin-top: 1rem;
     }
@@ -189,13 +192,7 @@
 </head>
 <body class="light-mode">
 
-  <!-- ===== VIDEO BACKGROUND ===== -->
-  <video autoplay muted loop id="bgVideo">
-    <source src="output.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-  </video>
-
-  <!-- ===== COMPLETION CELEBRATION SCREEN ===== -->
+  <!-- Completion Celebration Screen -->
   <div id="completionScreen" class="completion-screen">
     <div class="flowers">🌸🌻🌼🌷</div>
     <h1>Congratulations!</h1>
@@ -203,11 +200,11 @@
     <button onclick="closeCompletionScreen()">Close</button>
   </div>
 
-  <!-- ===== MAIN CONTAINER ===== -->
+  <!-- Main Container -->
   <div class="container">
     <div class="flex">
       <h1>Bad Habit Breaker</h1>
-      <button class="toggle-theme" onclick="toggleTheme()"></button>
+      <button class="toggle-theme" onclick="toggleTheme()">Toggle Theme</button>
     </div>
 
     <!-- Add New Habit Form -->
@@ -247,9 +244,7 @@
 
   <!-- ===== JAVASCRIPT ===== -->
   <script>
-    /**********************************************************
-     * GLOBAL VARIABLES / STATE
-     **********************************************************/
+    // GLOBAL VARIABLES / STATE
     let habits = [];
     let journalEntries = [];
 
